KB-11696 sonar issue fixes (#83)